add google auth viewmodel

--- a/FightClub/Info.plist
+++ b/FightClub/Info.plist
@@ -2,10 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.706992104238-cjnh97q7gacedjjgnlh84fb415qig5k7</string>
+			</array>
+		</dict>
+	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+    <key>GIDClientID</key>
+    <string>706992104238-cjnh97q7gacedjjgnlh84fb415qig5k7.apps.googleusercontent.com</string>
 </dict>
 </plist>
