--- a/FightClub/Info.plist
+++ b/FightClub/Info.plist
@@ -2,14 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Live 송출을 위한 마이크 접근 권한이 필요합니다.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>복싱 동작을 녹화하고 분석하기 위해 카메라 접근 권한이 필요합니다.</string>
-	<key>FirebaseAppDelegateProxyEnabled</key>
-	<string>NO</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -21,6 +13,8 @@
 			</array>
 		</dict>
 	</array>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<string>NO</string>
 	<key>GIDClientID</key>
 	<string>706992104238-cjnh97q7gacedjjgnlh84fb415qig5k7.apps.googleusercontent.com</string>
 	<key>NSAppTransportSecurity</key>
@@ -32,5 +26,7 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
