--- a/FightClub Watch App/Info.plist
+++ b/FightClub Watch App/Info.plist
@@ -4,7 +4,9 @@
 <dict>
 	<key>WKBackgroundModes</key>
 	<array>
+		<string>physical-therapy</string>
 		<string>workout-processing</string>
+		<string>mindfulness</string>
 	</array>
 </dict>
 </plist>
